# blender-pasty

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  README.md  __init__.py  blender-pasty.code-workspace  blender_manifest.toml  compose.yaml  dprint.jsonc  lefthook.yaml  package.json  prek.toml  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-blender/: action.yml
.github/actions/setup-project/: action.yml
.github/workflows/: _verify.yml  blender.yml  build.yml  checks.yml  ci.yml  release-build.yml  release-candidate.yml  release.yml
.github/workflows/scripts/: plan_targets.py  run_linux_wayland_clipboard.sh  run_linux_x11_clipboard.sh
.mise/: config.toml
.mise/tasks/: blender.py  check-commit-message  dev.py  extension.py  lint  release-notes.py  release.py  test.py
addon/: __init__.py  blender_types.py  clipboard.py  image_lookup.py  preferences.py  registration.py  storage.py
addon/areas/: __init__.py  sequencer.py  shader_editor.py  view_3d.py
checks/: __init__.py  addon_behavior.py  blender.py  clipboard_blender.py  clipboard_os.py  installed_addon.py  smoke_package.py  smoke_repo.py  source_addon.py
checks/addon/: behavior.py  installed.py  package.py  source.py
checks/clipboard/: blender.py  os.py  run.py  scenarios.py
checks/fixtures/images/: README.md
checks/linux/: docker.sh  run.py  wayland.sh  x11.sh
dictionaries/: python-extended.txt
docker/linux-test/: Dockerfile
docs/: development.md  manual-testing.md  product-design.md  release.md  technical-design.md  testing.md
script/: extension  fix-whitespace  lint  setup
tests/: gui_clipboard.py  smoke_extension.py  test_ci_helpers.py
tests/ci/: install_blender.py  put_clipboard_image.py  run_blender.py
