[project]
name = "blender-pasty"
# Pasty releases use blender_manifest.toml; this Python project only owns tooling.
version = "0.0.0"
description = "Paste clipboard images into Blender"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = []

[dependency-groups]
build = [
    "bpy==4.2.*",
]
dev = [
    "debugpy",
    "fake-bpy-module",
    "ruff",
    "ty",
]

[tool.uv]
package = false
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]

[tool.ruff]
fix = true
line-length = 100
target-version = "py311"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Ruff format owns trailing comma layout.
    "D", # Short Blender operators are clearer without forced docstrings everywhere.
    "ISC001", # Ruff format owns string layout.
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "N999", # Repo path has a hyphen, so package marker files inherit that name.
]
"addon/**/*.py" = [
    "N801", # Blender class names use add-on/operator prefixes.
]
"addon/areas/*.py" = [
    "ANN", # Blender callbacks keep the bpy-owned signature shape.
    "S101", # Blender operators use assertions for runtime context checks.
    "TID252", # Blender loads extensions under bl_ext.*, so parent-relative imports are correct.
]
